--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,5 +14,9 @@
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "sass": "^1.85.1",
+    "sass-loader": "^16.0.5"
   }
 }
